# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

group("build_module") {
  deps = [ ":distributeddatasvcfwk" ]
}
config("module_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "include/utils",
    "${data_service_path}/adapter/include",
    "${kv_store_path}/interfaces/innerkits/distributeddata/include",
    "${kv_store_common_path}",
    "${kv_store_distributeddb_path}/interfaces/include/",
    "${kv_store_distributeddb_path}/include/",
  ]
}

config("module_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${data_service_path}/framework/include/account",
    "${data_service_path}/framework/include/dfx",
    "${data_service_path}/framework/include/network",
    "${kv_store_common_path}",
  ]
}

ohos_shared_library("distributeddatasvcfwk") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "account/account_delegate.cpp",
    "app_id_mapping/app_id_mapping_config_manager.cpp",
    "backuprule/backup_rule_manager.cpp",
    "changeevent/remote_change_event.cpp",
    "checker/checker_manager.cpp",
    "cloud/asset_loader.cpp",
    "cloud/cloud_config_manager.cpp",
    "cloud/cloud_db.cpp",
    "cloud/cloud_event.cpp",
    "cloud/cloud_extra_data.cpp",
    "cloud/cloud_info.cpp",
    "cloud/cloud_last_sync_info.cpp",
    "cloud/cloud_lock_event.cpp",
    "cloud/cloud_mark.cpp",
    "cloud/cloud_report.cpp",
    "cloud/cloud_server.cpp",
    "cloud/cloud_share_event.cpp",
    "cloud/cloud_sync_finished_event.cpp",
    "cloud/make_query_event.cpp",
    "cloud/schema_meta.cpp",
    "cloud/sharing_center.cpp",
    "cloud/subscription.cpp",
    "cloud/sync_event.cpp",
    "cloud/sync_strategy.cpp",
    "communication/connect_manager.cpp",
    "dfx/reporter.cpp",
    "directory/directory_manager.cpp",
    "dump/dump_manager.cpp",
    "eventcenter/event.cpp",
    "eventcenter/event_center.cpp",
    "feature/feature_system.cpp",
    "feature/static_acts.cpp",
    "metadata/appid_meta_data.cpp",
    "metadata/auto_launch_meta_data.cpp",
    "metadata/capability_meta_data.cpp",
    "metadata/capability_range.cpp",
    "metadata/corrupted_meta_data.cpp",
    "metadata/matrix_meta_data.cpp",
    "metadata/meta_data.cpp",
    "metadata/meta_data_manager.cpp",
    "metadata/secret_key_meta_data.cpp",
    "metadata/store_debug_info.cpp",
    "metadata/store_meta_data.cpp",
    "metadata/store_meta_data_local.cpp",
    "metadata/strategy_meta_data.cpp",
    "metadata/switches_meta_data.cpp",
    "metadata/user_meta_data.cpp",
    "metadata/version_meta_data.cpp",
    "network/network_delegate.cpp",
    "screen/screen_manager.cpp",
    "serializable/serializable.cpp",
    "snapshot/bind_event.cpp",
    "snapshot/snapshot.cpp",
    "store/auto_cache.cpp",
    "thread/thread_manager.cpp",
    "utils/anonymous.cpp",
    "utils/base64_utils.cpp",
    "utils/block_integer.cpp",
    "utils/constant.cpp",
    "utils/converter.cpp",
    "utils/corrupt_reporter.cpp",
    "utils/crypto.cpp",
    "utils/ref_count.cpp",
    "utils/time_utils.cpp",
  ]

  cflags = [
    "-Werror",
    "-Wno-multichar",
    "-D_LIBCPP_HAS_COND_CLOCKWAIT",
    "-fdata-sections",
    "-ffunction-sections",
  ]

  ldflags = [
    "-Wl,-z,relro,-z,now,--gc-sections"
  ]

  cflags_cc = [ "-fvisibility=hidden" ]

  configs = [ ":module_config" ]

  public_configs = [ ":module_public_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "json:nlohmann_json_static",
    "openssl:libcrypto_shared",
  ]
  subsystem_name = "distributeddatamgr"

  part_name = "datamgr_service"
  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
}
