# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

module_output_path = "distributeddatamgr/distributeddb"

mul_sources = [
  "common/distributeddb/src/auto_launch_callback.cpp",
  "common/distributeddb/src/delegate_callback.cpp",
  "common/distributeddb/src/delegate_kv_mgr_callback.cpp",
  "common/distributeddb/src/distributed_test_tools.cpp",
  "common/distributeddb/src/kv_store_observer_impl.cpp",
  "common/distributeddb/src/kv_store_snapshot_callback.cpp",
]

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../libs/distributeddb/interfaces/include",
    "../libs/distributeddb/storage/include",
    "../libs/distributeddb/storage/src",
    "../libs/distributeddb/storage/src/multiver",
    "../libs/distributeddb/storage/src/sqlite",
    "../libs/distributeddb/common/include",
    "../libs/distributeddb/include",
    "../libs/distributeddb/interfaces/src",
    "../adapter/include/communicator",
    "//developtools/liblog",
    "common/distributeddb/include",
    "moduletest/common/distributeddb/include",
    "//utils/native/base/include",
    "//third_party/sqlite/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/app_distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//third_party/openssl/include/",
  ]

  defines = [
    "_LARGEFILE64_SOURCE",
    "_FILE_OFFSET_BITS=64",
    "SQLITE_HAS_CODEC",
    "USE_SQLITE_SYMBOLS",
    "USING_HILOG_LOGGER",
    "TESTCASES_USING_GTEST_EXT",
    "OMIT_JSON",
    "LOW_LEVEL_MEM_DEV",
    "RELEASE_MODE_V2",
    "RELEASE_MODE_V3",
  ]
  ldflags = [ "-Wl,--exclude-libs,ALL" ]
}

##############################moduletest##########################################
ohos_moduletest("DistributeddbKvTransactionTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributed_crud_transaction_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_transaction_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbKvTransactionPerfTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributed_crud_transaction_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_transaction_perf_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbKvConcurrencyCrudTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_concurrency_crud_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbKvBatchCrudTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_batch_crud_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbKvCreateTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_create_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbKvCrudTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_crud_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbKvObserverTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_observer_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbKvObserverSnapTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributed_test_sysinfo.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_observer_snap_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbKvBackupTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_backup_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbKvRealdelTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "moduletest/common/distributeddb/src/distributeddb_kv_realdel_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbCreateTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_create_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbNbCrudTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_crud_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}
ohos_moduletest("DistributeddbNbObserverTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_observer_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbCursorTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_cursor_test.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_cursor_testcase.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbBackupTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_backup_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbBatchCrudTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_batch_crud_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbLocalBatchCrudTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_local_batch_crud_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbSchemaDbTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_schema_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbPredicateQueryTest") {
  module_out_path = module_output_path

  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_predicate_query_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbPredicateQueryExpandTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "common/distributeddb/src/distributeddb_schema_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_predicate_query_expand_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbAutolaunchTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "common/distributeddb/src/distributeddb_schema_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_autolaunch_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributedbNbDbDamageTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "common/distributeddb/src/distributeddb_schema_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_db_damage_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbCrudPowerTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "common/distributeddb/src/distributeddb_schema_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_crud_power_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbSchemaTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "common/distributeddb/src/distributeddb_schema_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_schema_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

ohos_moduletest("DistributeddbNbSchemaUpgradeTest") {
  module_out_path = module_output_path
  sources = [
    "common/distributeddb/src/distributeddb_constant.cpp",
    "common/distributeddb/src/distributeddb_data_generator.cpp",
    "common/distributeddb/src/distributeddb_nb_test_tools.cpp",
    "common/distributeddb/src/distributeddb_schema_test_tools.cpp",
    "moduletest/common/distributeddb/src/distributeddb_nb_schema_upgrade_test.cpp",
  ]
  sources += mul_sources
  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "distributeddatamgr"
}

###############################################################################
group("moduletest") {
  testonly = true
  deps = [
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]

  deps += [
    ":DistributedbNbDbDamageTest",
    ":DistributeddbKvBackupTest",
    ":DistributeddbKvBatchCrudTest",
    ":DistributeddbKvConcurrencyCrudTest",
    ":DistributeddbKvCreateTest",
    ":DistributeddbKvCrudTest",
    ":DistributeddbKvObserverSnapTest",
    ":DistributeddbKvObserverTest",
    ":DistributeddbKvRealdelTest",
    ":DistributeddbKvTransactionPerfTest",
    ":DistributeddbKvTransactionTest",
    ":DistributeddbNbAutolaunchTest",
    ":DistributeddbNbBackupTest",
    ":DistributeddbNbBatchCrudTest",
    ":DistributeddbNbCreateTest",
    ":DistributeddbNbCrudPowerTest",
    ":DistributeddbNbCrudTest",
    ":DistributeddbNbCursorTest",
    ":DistributeddbNbLocalBatchCrudTest",
    ":DistributeddbNbObserverTest",
    ":DistributeddbNbPredicateQueryExpandTest",
    ":DistributeddbNbPredicateQueryTest",
    ":DistributeddbNbSchemaTest",
    ":DistributeddbNbSchemaUpgradeTest",
  ]
}
###############################################################################
