# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "distributeddatamgr_datamgr/distributeddatafwk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/kvdb/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/kvdb/src",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/src",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/test/distributedtest/single_kvstore_client",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/app_distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/app/include",
    "//test/developertest/aw/distributed",
  ]
  lib_dirs = [ "//foundation/appexecfwk/libs" ]
}

ohos_distributedtest("DistributedTest") {
  module_out_path = module_output_path

  sources = [
    "distributed_test_helper.cpp",
    "distributed_test_helper.h",
  ]
  sources += [ "distributed_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb/:distributeddb",
    "//third_party/googletest:gtest",
    "//utils/native/base:utils",
  ]
}

ohos_distributedtest("DistributedTestAgent") {
  module_out_path = module_output_path

  sources = [ "distributed_test_agent.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb/:distributeddb",
    "//third_party/googletest:gtest",
    "//utils/native/base:utils",
  ]
}

###############################################################################
group("distributedtest") {
  testonly = true

  deps = [
    ":DistributedTest",
    ":DistributedTestAgent",
  ]
}
###############################################################################
